# Stevens

./: .gitignore  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt
codehelper/: apps.py  llm.py  views.py
codehelper/templates/: base.html  code_helper.html  home.html
stevens/: settings.py  urls.py
wisdom/: urls.py  views.py
wisdom/templates/: wisdom.html
