[tool.poetry]
name = "stevens"
version = "0.1.0"
description = ""
authors = ["Ian Davies <ird.davies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
langchain = "^0.0.268"
pydantic = "^2.2.1"
poetry-plugin-dotenv = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
